--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello dear student</h1>
+    <p> Welcome to my new blog.Today we will learn about html and css with example. </p>
 </body>
 </html>
